<resources>
    <string name="app_name">gaiya-RideBook</string>
    <string name="delete">DELETE</string>
    <string name="edit">EDIT</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="distance">Distance</string>
    <string name="add">Add</string>
    <string name="go_back_to_home_page">Go Back to Home Page</string>
    <string name="textview">TextView</string>
    <string name="my_ride">My Ride</string>
    <string name="average_speed">Average Speed</string>
    <string name="comment">Comment</string>
    <string name="non_negative_integer">non-negative integer</string>
    <string name="average_cadence">Average Cadence</string>
    <string name="in_km_non_negative_decimal">in km (non-negative decimal)</string>
    <string name="km_h_non_negative_decimal">km/h (non-negative decimal)</string>
</resources>
