<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/lightpurple"
    tools:context=".Display">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#9C68B1">

        <TextView
            android:id="@+id/viewID"
            android:layout_width="421dp"
            android:layout_height="58dp"
            android:text="@string/my_ride"
            android:textSize="30sp"
            android:textAlignment="center"/>
    </LinearLayout>

    <TextView
        android:id="@+id/viewDistance"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="5sp"
        android:text="@string/textview"
        android:textSize="20sp"

        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="58dp" />


    <TextView
        android:id="@+id/viewDate"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="5sp"
        android:text="@string/textview"
        android:textSize="20sp"

        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="58dp" />

    <TextView
        android:id="@+id/viewTime"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="5sp"
        android:text="@string/textview"
        android:textSize="20sp"

        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="58dp" />

    <TextView
        android:id="@+id/viewCadence"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="5sp"
        android:text="@string/textview"
        android:textSize="20sp"

        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="58dp" />

    <TextView
        android:id="@+id/viewSpeed"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="5sp"
        android:text="@string/textview"
        android:textSize="20sp"

        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="58dp" />

    <TextView
        android:id="@+id/viewComment"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="5sp"
        android:text="@string/textview"
        android:textSize="20sp"

        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="58dp" />

    <!--<LinearLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content">-->
        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:padding="4dp"
            android:background="#9C68B1"
            android:text="@string/go_back_to_home_page"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="92dp" />

    <!--</LinearLayout>-->


</LinearLayout>