<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/lightpurple"
    tools:context=".MainActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A569BD"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textColor="#fff"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/distance"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/date"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/time"/>

    </LinearLayout>


    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="449dp"
        android:layout_marginBottom="20dp">

    </ListView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/total_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="421dp"
        android:layout_height="wrap_content"
        android:background="#450160"
        android:visibility="visible">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_ride_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="110dp"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@android:drawable/ic_input_add"
            android:tint="@drawable/lightpurple"
            android:visibility="visible"
            app:rippleColor="@color/design_default_color_primary_dark" />


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/view_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:clickable="true"
            android:focusable="true"
            android:tint="@drawable/lightpurple"
            app:srcCompat="@android:drawable/ic_menu_view" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/edit_button"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="200dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:focusable="true"
            android:tint="@drawable/lightpurple"
            app:rippleColor="@color/design_default_color_primary_dark"
            app:srcCompat="@android:drawable/ic_menu_edit" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/delete_ride_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="280dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="deleteRide"
            android:tint="@drawable/lightpurple"
            app:fabSize="auto"
            app:rippleColor="@color/design_default_color_primary_dark"
            app:srcCompat="@android:drawable/ic_menu_delete" />

    </FrameLayout>




    <!--<LinearLayout-->
        <!--android:layout_width="381dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal">-->




    <!--</LinearLayout>-->


</LinearLayout>